<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/genderTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="32dp"
        android:text="@string/choose_your_gender"
        android:textColor="@color/text_primary"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/genderContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/genderContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/genderGetStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderTitle">

        <ImageView
            android:id="@+id/genderManButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_avatar"
            app:layout_constraintBottom_toTopOf="@id/genderManTextView"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/genderManSelectIndicatorImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_checked_circle"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/genderManButton"
            app:layout_constraintTop_toTopOf="@id/genderManButton"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/genderManTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/male_gender"
            app:layout_constraintBottom_toTopOf="@id/genderWomanButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderManButton" />

        <ImageView
            android:id="@+id/genderWomanButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_avatar"
            app:layout_constraintBottom_toTopOf="@id/genderWomanTextView"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderManTextView" />

        <ImageView
            android:id="@+id/genderWomanSelectIndicatorImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_checked_circle"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/genderWomanButton"
            app:layout_constraintTop_toTopOf="@id/genderWomanButton" />

        <TextView
            android:id="@+id/genderWomanTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/female_gender"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderWomanButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/genderGetStartedButton"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        android:enabled="false"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/get_started"
        android:textAllCaps="false"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:enabled="true" />

</androidx.constraintlayout.widget.ConstraintLayout>